add a header element and nest a h1 with a heading within

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <h1>A Tourists Guide</h1>
+    </header>
     <script src="index.js"></script>
   </body>
 </html>
