add a main element, nest a form within that has an input field and a submit button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <header>
       <h1>A Tourists Guide</h1>
     </header>
+    <main>
+      <form action="">
+        <label for="country-code">Country Code: </label>
+        <input
+          type="text"
+          name="country-code"
+          required
+          placeholder="Input County Code Here"
+        />
+        <input type="submit" value="Submit" />
+      </form>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
