create an article within the main and nest a p with some placeholder text

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       <h1>A Tourists Guide</h1>
     </header>
     <main>
+      <article>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          rem consequatur exercitationem laboriosam a harum quis odio. Accusamus
+          omnis id, explicabo eos, molestias quia tempora vero magni fugit
+          voluptatum optio!
+        </p>
+      </article>
       <form action="">
         <label for="country-code">Country Code: </label>
         <input
