add placeholder content to hold images and details

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         <input type="submit" value="Submit" />
       </form>
     </main>
+    <section>
+      <div>
+        <p>Image Will be appended here and details</p>
+        <span>Detail one</span>
+        <span>Detail two</span>
+        <span>Detail three</span>
+        <span>Detail four</span>
+      </div>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
