--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
     <section>
       <div>
         <p>Image Will be appended here and details</p>
-        <span>Detail one</span>
-        <span>Detail two</span>
-        <span>Detail three</span>
-        <span>Detail four</span>
+        <!-- div details class -->
+        <div>
+          <span>Detail one</span>
+          <span>Detail two</span>
+          <span>Detail three</span>
+          <span>Detail four</span>
+        </div>
       </div>
     </section>
     <script src="index.js"></script>
