add a footer and within a form to take comments or takes from users

--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div>
+        <h3>What is your take?</h3>
+        <form action="">
+          <label for="comments">Let me hear form you:</label>
+          <input
+            type="text"
+            name="comments"
+            id=""
+            placeholder="Your comment here ..."
+          />
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
