change the input field to a textarea to take more comments

--- a/index.html
+++ b/index.html
@@ -46,13 +46,9 @@
       <div>
         <h3>What is your take?</h3>
         <form action="">
-          <label for="comments">Let me hear form you:</label>
-          <input
-            type="text"
-            name="comments"
-            id=""
-            placeholder="Your comment here ..."
-          />
+          <label for="comments">Let me hear from you:</label>
+          <textarea name="comments" id="" placeholder="What is your take, ">
+          </textarea>
           <input type="submit" value="Submit" />
         </form>
       </div>
