try adding a placeholder to the form at the footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h3>What is your take?</h3>
         <form action="">
           <label for="comments">Let me hear from you:</label>
-          <textarea name="comments" id="" placeholder="What is your take, ">
+          <textarea placeholder="what is your  take?" name="comments" id="">
           </textarea>
           <input type="submit" value="Submit" />
         </form>
