set a border and some border properties for the main nested in the article

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>A Tourists Guide</h1>
     </header>
     <main>
-      <article>
+      <article id="info">
         <p class="placeholder-p">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
           rem consequatur exercitationem laboriosam a harum quis odio. Accusamus
