wrap the search form in a div and add an id attribute to it

--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
           voluptatum optio!
         </p>
       </article>
-      <form action="" id="search-county">
-        <label for="country-code">Country Code: </label>
-        <input
-          type="text"
-          name="country-code"
-          id="country-code"
-          required
-          placeholder="Input County Code Here"
-        />
-        <input type="submit" value="Submit" id="submit-search" />
-      </form>
+      <div id="search-form">
+        <form action="" id="search-county">
+          <label for="country-code">Country Code: </label>
+          <input
+            type="text"
+            name="country-code"
+            id="country-code"
+            required
+            placeholder="Input County Code Here"
+          />
+          <input type="submit" value="Submit" id="submit-search" />
+        </form>
+      </div>
     </main>
     <section>
       <div id="details">
