--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <section>
       <div id="details">
         <p>Image Will be appended here and details</p>
+        <div id="image"><img src="" alt="" /></div>
         <!-- div details class -->
         <div id="span-details">
           <span>Detail one</span>
