create an items directory and within an image directory to hold placeholder images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <section>
       <div id="details">
         <p>Image Will be appended here and details</p>
-        <div id="image"><img src="" alt="" /></div>
+        <div id="image">
+          <img src="" alt="" />
+        </div>
         <!-- div details class -->
         <div id="span-details">
           <span>Detail one</span>
