add a placeholder image in the images folder

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="details">
         <p>Image Will be appended here and details</p>
         <div id="image">
-          <img src="" alt="" />
+          <img src="items/images/tired-cat.jpeg" alt="tired-cat" />
         </div>
         <!-- div details class -->
         <div id="span-details">
