edit the user-comments section

--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
       </div>
     </section>
     <footer>
-      <div>
-        <h3>What is your take?</h3>
+      <div id="user-comment">
+        <h4>Let me hear from you</h4>
         <form action="">
-          <label for="comments">Let me hear from you:</label>
           <textarea placeholder="what is your  take?" name="comments" id="">
           </textarea>
           <input type="submit" value="Submit" id="submit-comments" />
