--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </div>
     </main>
     <section>
+      image
       <div id="details">
         <p>Image Will be appended here and details</p>
         <div id="image">
@@ -40,10 +41,10 @@
           <!-- div details class -->
 
           <div id="span-details">
-            <span>Detail one</span>
-            <span>Detail two</span>
+            <span>Details here</span>
+            <!-- <span>Detail two</span>
             <span>Detail three</span>
-            <span>Detail four</span>
+            <span>Detail four</span> -->
           </div>
         </div>
       </div>
