uncomment the extra divs and provide an id attribute to each

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           <!-- div details class -->
 
           <div id="span-details">
-            <span>Details here</span>
-            <!-- <span>Detail two</span>
-            <span>Detail three</span>
-            <span>Detail four</span> -->
+            <span id="nameDetail"></span>
+            <span id="funFact"> </span>
+            <span id="mainResource"> </span>
+            <span id="touristAttraction"> </span>
           </div>
         </div>
       </div>
