rewrite the placeholder at the form input in the search-country form

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             name="country-code"
             id="country-code"
             required
-            placeholder="Input County Code Here"
+            placeholder="Input County Name Here:"
           />
           <input type="submit" value="Submit" id="submit-search" />
         </form>
