add a div to make the image slider in the article element, with div info and assign the div a div of image-slide and put in some placeholder text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
           omnis id, explicabo eos, molestias quia tempora vero magni fugit
           voluptatum optio!
         </p>
+        <div id="image-slide">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus, maxime nobis possimus ratione a pariatur aut amet
+            quod illo, tempore tenetur obcaecati inventore ea modi magni
+            accusamus iusto minima. Enim.
+          </p>
+          <img src="" alt="" />
+        </div>
       </article>
       <div id="search-form">
         <form action="" id="search-county">
