wrap info sections and image slider div in a section element with an id of info-section

--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
     </header>
     <main>
       <article id="info">
-        <p class="placeholder-p">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          rem consequatur exercitationem laboriosam a harum quis odio. Accusamus
-          omnis id, explicabo eos, molestias quia tempora vero magni fugit
-          voluptatum optio!
-        </p>
-        <div id="image-slide">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus, maxime nobis possimus ratione a pariatur aut amet
-            quod illo, tempore tenetur obcaecati inventore ea modi magni
-            accusamus iusto minima. Enim.
+        <section id="info-section">
+          <p class="placeholder-p">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+            rem consequatur exercitationem laboriosam a harum quis odio.
+            Accusamus omnis id, explicabo eos, molestias quia tempora vero magni
+            fugit voluptatum optio!
           </p>
-          <img src="" alt="" />
-        </div>
+          <div id="image-slide">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus, maxime nobis possimus ratione a pariatur aut amet
+              quod illo, tempore tenetur obcaecati inventore ea modi magni
+              accusamus iusto minima. Enim.
+            </p>
+            <img src="" alt="" />
+          </div>
+        </section>
       </article>
       <div id="search-form">
         <form action="" id="search-county">
