add id selectors to the image in the image div and image-slide div and add a code to append the image src as the src of the searched image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
       <div id="details">
         <p>Image Will be appended here and details</p>
         <div id="image">
-          <img src="items/images/tired-cat.jpeg" alt="tired-cat" />
+          <img
+            src="items/images/tired-cat.jpeg"
+            alt="tired-cat"
+            id="imageResult"
+          />
           <!-- div details class -->
 
           <div id="span-details">
