add a h3 to show county name on top of the image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </main>
     <section>
       <div id="details">
-        <p>Image Will be appended here and details</p>
+        <h3 id="countyName"></h3>
         <div id="image">
           <img
             src="items/images/tired-cat.jpeg"
