--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
       </div>
     </section>
     <hr />
+    <div id="commentsDiv">
+      <form id="commentsForm">
+        <input type="text" name="comment" id="commentInput" />
+        <input type="submit" value="submitComments" id="submitComments" />
+      </form>
+    </div>
+    <hr />
     <footer>
       <div id="user-comment">
         <h4>Let me hear from you</h4>
