add an h3 in the comments place

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </section>
     <hr />
     <div id="commentsDiv">
+      <h3>Your comments here</h3>
       <form id="commentsForm">
         <input type="text" name="comment" id="commentInput" />
         <input type="submit" value="submitComments" id="submitComments" />
