add a span with id comments to display user comments

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <span id="funFact"> </span>
             <span id="mainResource"> </span>
             <span id="touristAttraction"> </span>
+            <span id="comments"></span>
           </div>
         </div>
       </div>
