comment out the h3 displaying the county name in the html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </main>
     <section>
       <div id="details">
-        <h3 id="countyName"></h3>
+        <!-- <h3 id="countyName"></h3> -->
         <div id="image">
           <img
             src="items/images/tired-cat.jpeg"
