modify the info-section with some guides on how to use the app

--- a/index.html
+++ b/index.html
@@ -15,17 +15,15 @@
       <article id="info">
         <section id="info-section">
           <p class="placeholder-p">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            rem consequatur exercitationem laboriosam a harum quis odio.
-            Accusamus omnis id, explicabo eos, molestias quia tempora vero magni
-            fugit voluptatum optio!
+            Welcome to the Tourist Guide. Here the main goal is to give you the
+            user a peep into the glorious Kenya and help you choose a county to
+            visit.The goal is to help you choose your perfect place of interst
+            Welcome.
           </p>
           <div id="image-slide">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus, maxime nobis possimus ratione a pariatur aut amet
-              quod illo, tempore tenetur obcaecati inventore ea modi magni
-              accusamus iusto minima. Enim.
+              To use it, just input the county name, with correct spelling into
+              the input form below, and watch the magic unfold.Happy visiting!
             </p>
             <img src="" alt="" />
           </div>
