fix error caused from commenting the h3 with county name and add a a patch to send comments

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </main>
     <section>
       <div id="details">
-        <!-- <h3 id="countyName"></h3> -->
         <div id="image">
+          <h3 id="countyName"></h3>
           <img
             src="items/images/tired-cat.jpeg"
             alt="tired-cat"
