remove the textarea at the bottom

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </section>
     <hr />
     <div id="commentsDiv">
-      <h3>Your comments here</h3>
+      <h3>Add your comments here</h3>
       <form id="commentsForm">
         <input type="text" name="comment" id="commentInput" />
         <input type="submit" value="submitComments" id="submitComments" />
@@ -73,14 +73,18 @@
     </div>
     <hr />
     <footer>
-      <div id="user-comment">
+      <!-- <div id="user-comment">
         <h4>Let me hear from you</h4>
-        <form action="">
-          <textarea placeholder="what is your  take?" name="comments" id="">
+        <form action="" id="userReview">
+          <textarea
+            placeholder="what is your  take?"
+            name="comments"
+            id="userReviewInput"
+          >
           </textarea>
           <input type="submit" value="Submit" id="submit-comments" />
         </form>
-      </div>
+      </div> -->
     </footer>
     <script src="index.js"></script>
   </body>
